Order page ingredient popup double scroll bug fixed
Cancel order bug also fixed by reloading entire site instead

--- a/stylesAccordian.css
+++ b/stylesAccordian.css
@@ -301,7 +301,6 @@
 #customizeItemName {
     width:100%;
     text-align:center;
-
 }
 
 #customizeItemPrice {
@@ -416,4 +415,8 @@
     float:left;
     clear:both;
     padding-left:30px;
+}
+
+body.ui-mobile-viewport {
+
 }
